# Lorum

./: pyproject.toml
accounts/: services.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
forum/: admin.py  configs.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_like_user.py  0003_article_category.py  0004_auto_20211002_1101.py
forum/templatetags/: tags.py
forum/unittests/: test_models.py  test_services.py  test_views.py
functional_tests/: base.py  tests.py
pages/: tests.py
templates/: _base.html
templates/forum/: add_article.html  article.html  edit_article.html  electronics.html  home.html  mathematics.html  my_articles.html  other.html  physics.html  programming.html  security.html
templates/pages/: home.html
templates/registration/: login.html  signup.html  user.html
