[tool.poetry]
name = "lorum"
version = "0.1.0"
description = ""
authors = ["Lopkop <mark.paronyan2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
python-dotenv = "^0.19.0"
selenium = "^3.141.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
